--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,16 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body id="body">
-  <div id="output"></div>
 
-  <div id="container">
-    <input type="text" id="input" value="">
-  </div>
+<body id="body">
+	<div class="split left">
+		<div id="container">
+			<div id="output"></div>
+    			<input type="text" id="input" value="" placeholder="" />
+		</div>
+	</div>
+
+	<audio id="music"><source src="your-turn.mp3" type="audio/mpeg" /></audio>
 
   <!-- jquery for enter key press -->
   <script src="https://code.jquery.com/jquery-3.0.0.js" integrity="sha256-jrPLZ+8vDxt2FnE1zvZXCkCcebI/C8Dt5xyaQBjxQIo=" crossorigin="anonymous"></script>
