--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Simple JavaScript Chatbot</title>
+  <title>Calm bot</title>
 
   <script src="/socket.io/socket.io.js"></script>
 
