--- a/public/index.html
+++ b/public/index.html
@@ -9,41 +9,54 @@
 	<script src="/socket.io/socket.io.js"></script>
 
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+
 </head>
 
 
 <body id="body">
-
-<div class="grid-container">
+<div class="reset">
+	<button id="reset" type="button">RESET</button>
+</div>
+<div class="grid-container-top">
 	<div class="grid-item-toolbar">
 		<div class="left">
 			<img src="logo.png">
 		</div>
 	</div>
-	<div class="grid-item"></div>
-	<div class="grid-item"><button id="up" class="button_up" type="button"></button></div>
-	<div class="grid-item"></div>
-	<div class="grid-item"><button id="left" class="button_left" type="button"></button></div>
-	<div class="grid-item"><button id="play" class="play" type="button">GO</button></div>
-	<div class="grid-item"><button id="right" class="button_right" type="button"></button></div>
-	<div class="grid-item"></div>
-	<div class="grid-item"><button id="down" class="button_down" type="button"></button></div>
-	<div class="grid-item"></div>
-	<div class="grid-item"></div>
-	<button class="accordion grid-item-toolbar">SHOW BOARD</button>
-	<div class="panel grid-item-board">
-		<div class="grid-container_board">
-			<div class="grid-item" id="b1">1</div>
-			<div class="grid-item" id="b2">2</div>
-			<div class="grid-item" id="b3">3</div>
-			<div class="grid-item" id="b4">4</div>
-			<div class="grid-item" id="b5">5</div>
-			<div class="grid-item" id="b6">6</div>
-			<div class="grid-item" id="b7">7</div>
-			<div class="grid-item" id="b8">8</div>
-			<div class="grid-item" id="b9">9</div>
-		</div>
+	<div class="grid-item-title main-title">
+		TIC-TAC-TOE
 	</div>
+
+</div>
+
+<div class="grid-container">
+	<div id="turn" class="grid-item text-turn">Your turn</div>
+	<div class="grid-item"><button id="up" class="button_dir_vert button_up" type="button"></button></div>
+	<div id="type" class="grid-item text-type">X</div>
+	<div class="grid-item">
+		<button id="left" class="button_dir_horiz button_left" type="button"></button>
+
+	</div>
+	<div class="grid-item"><button id="play" class="play" type="button">PLAY TURN</button></div>
+	<div class="grid-item"><button id="right" class="button_dir_horiz button_right" type="button"></button></div>
+	<div class="grid-item"></div>
+	<div class="grid-item"><button id="down" class="button_dir_vert button_down" type="button"></button></div>
+	<div class="grid-item"></div>
+	<div class="grid-item"></div>
+	<div class="grid-item"></div>
+</div>
+<div class="grid-container grid-container-board">
+		<div class="grid-item board-visual-box" id="b1">1</div>
+		<div class="grid-item board-visual-box" id="b2">2</div>
+		<div class="grid-item board-visual-box" id="b3">3</div>
+		<div class="grid-item board-visual-box" id="b4">4</div>
+		<div class="grid-item board-visual-box" id="b5">5</div>
+		<div class="grid-item board-visual-box" id="b6">6</div>
+		<div class="grid-item board-visual-box" id="b7">7</div>
+		<div class="grid-item board-visual-box" id="b8">8</div>
+		<div class="grid-item board-visual-box" id="b9">9</div>
+
 </div>
 
 <audio id="music"><source src="your-turn.mp3" type="audio/mpeg" /></audio>
